# trainingdata-tool

./: .gitmodules  CMakeLists.txt
src/: PGNGame.cpp  PGNGame.h  PGNMoveInfo.h  TrainingDataDedup.cpp  TrainingDataReader.cpp  TrainingDataReader.h  TrainingDataWriter.cpp  TrainingDataWriter.h  V5TrainingDataHashUtil.h  trainingdata-tool.cpp  trainingdata.cpp  trainingdata.h
